--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,6 @@ dest/aseets/css/autoprefixer
 .map
 dist/
 .bowerrc
-.gitignore
 package.json
 .jshintrc
 .eslintrc.json
@@ -64,3 +63,8 @@ readme.md
 /php/phpLab/
 /php/connectBD103G2.php
 timer.html
+test.html
+test1.html
+.gitignore
+
+/.gitignore
